<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieFragment">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/nome"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/releasedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameEt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/ano_de_lan_amento"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/releasedEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/releasedTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="date"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/producerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/releasedEt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/produtora"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/producerEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/producerTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/durationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/producerEt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/duracao"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/durationEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/durationTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <CheckBox
            android:id="@+id/watchedCb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/assistido"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationEt" />

        <TextView
            android:id="@+id/noteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/watchedCb"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/nota_0_10"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/noteEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/noteTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/genderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/noteEt"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/g_nero"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/genderSP"
            android:layout_width="match_parent"
            android:layout_height="38sp"
            app:layout_constraintTop_toBottomOf="@id/genderTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:entries="@array/gender_array"/>

        <Button
            android:id="@+id/saveBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/salvar_filme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/genderSP" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>